--- a/HTML/PSD to HTML/registration.html
+++ b/HTML/PSD to HTML/registration.html
@@ -7,13 +7,13 @@
     <title>Login</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/login-responsive.css">
+    <link rel="stylesheet" href="css/registration-responsive.css">
 </head>
 
 <body>
     <section class="d-flex flex-column flex-md-column flex-lg-row login-content">
 
-        <div class="d-flex justify-content-end flex-column hero-image" id="img">
+        <div class="d-flex justify-content-end flex-column hero-image ">
 
             <div class="image-content p-5">
                 <h1 class="text-light-custom">Sed ut perspiciatis unde omnis iste natus voluptatem.</h1>
@@ -24,16 +24,34 @@
             </div>
         </div>
 
-        <div class="d-flex flex-column p-5 justify-content-center">
+        <div class="d-flex flex-column p-5 justify-content-center right-div">
             <form class="d-flex flex-column mx-auto justify-content-center">
-                <label for="email" class="form-label login-label text-light-custom">Email Address</label>
-                <input type="email login-input" id="email" class="form-control login-input text-light-custom"
+                <label for="f-name" class="form-label mb-0 login-label text-light-custom">First Name</label>
+                <input type="text" id="f-name" class="form-control login-input text-light-custom" value="evan">
+
+                <label for="l-name" class="mt-3 mb-0 form-label text-secondary login-label text-light-custom">Last
+                    Name</label>
+                <input type="text" id="l-name" class="form-control login-input text-light-custom" value="donohue">
+
+                <label for="phone" class="mt-3 mb-0 form-label text-secondary login-label text-light-custom">Phone
+                    Number</label>
+                <input type="number" id="phone" class="form-control login-input text-light-custom" value="8923454615">
+
+                <label for="email" class="mt-3 mb-0 form-label text-secondary login-label text-light-custom">Email
+                    Address</label>
+                <input type="email" id="email" class="form-control login-input text-light-custom"
                     value="evan.donohue@gmail.com">
 
-                <label for="psw" class="mt-3 form-label text-secondary login-label text-light-custom">Password</label>
+                <label for="psw"
+                    class="mt-3 mb-0 form-label text-secondary login-label text-light-custom">Password</label>
                 <input type="password" id="psw" class="form-control login-input text-light-custom" value="**********">
 
-                <button class="btn mt-4 text-light-custom" id="login-btn">Login</button>
+                <label for="con-psw" class="mt-3 mb-0 form-label text-secondary login-label text-light-custom">Confirm
+                    Password</label>
+                <input type="password" id="con-psw" class="form-control login-input text-light-custom"
+                    value="**********">
+
+                <button class="btn mt-4 text-light-custom" id="login-btn">Register</button>
             </form>
 
             <div class="d-flex flex-column align-items-center bottom-div ">
@@ -47,6 +65,7 @@
                     Policy</span>
             </div>
         </div>
+
 
 
     </section>
