--- a/HTML/PSD to HTML/reset-password.html
+++ b/HTML/PSD to HTML/reset-password.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot Password</title>
+    <title>Reset Password</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fg-responsive.css">
@@ -24,28 +24,33 @@
             </div>
         </div>
 
-        <div class="d-flex flex-column p-5 justify-content-center ">
+        <div class="d-flex flex-column p-5 justify-content-center">
             <div class="text-center">
-                <h3>Forgot Password</h3>
-                <p>Enter your email address you've using for your account below and we will send you a password reset
-                    link
-                </p>
+                <h3>New Password</h3>
+                <p>Please enter a new password in the fields below </p>
             </div>
             <form class="d-flex flex-column mx-auto justify-content-center">
-                <label for="email" class="form-label login-label text-light-custom pt-3">Email Address</label>
-                <input type="email" id="email" class="form-control login-input text-light-custom"
-                    value="Enter your email address...">
-                <button class="btn mt-4 text-light-custom" id="login-btn">Reset my Password</button>
+                <label for="new-password" class="form-label text-secondary login-label text-light-custom">New
+                    Password</label>
+                <input type="password" id="email" class="form-control login-input text-light-custom login-input"
+                    value="**********">
+
+                <label for="psw" class="mt-3 form-label text-secondary login-label text-light-custom">Confirm New
+                    Password</label>
+                <input type="password" id="psw" class="form-control login-input text-light-custom" value="**********">
+
+                <button class="btn mt-4 text-light-custom" id="login-btn">Change Password</button>
             </form>
-            <div class="d-flex flex-column align-items-center bottom-div">
+
+            <div class="d-flex flex-column align-items-center bottom-div ">
                 <a class="text-center p-2" href="login.html">Login</a>
                 <span class="login-span text-light-custom privacy-text position-fixed">Priavcy
                     Policy</span>
             </div>
-
-
         </div>
 
+
+    </section>
 
 
 </body>
