--- a/HTML/PSD to HTML/login.html
+++ b/HTML/PSD to HTML/login.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -27,7 +28,7 @@
         <div class="d-flex flex-column p-5 justify-content-center">
             <form class="d-flex flex-column mx-auto justify-content-center">
                 <label for="email" class="form-label login-label text-light-custom">Email Address</label>
-                <input type="email login-input" id="email" class="form-control login-input text-light-custom"
+                <input type="email" id="email" class="form-control login-input text-light-custom"
                     value="evan.donohue@gmail.com">
 
                 <label for="psw" class="mt-3 form-label text-secondary login-label text-light-custom">Password</label>
