--- a/HTML/HTML Training Assignment/dashboard.html
+++ b/HTML/HTML Training Assignment/dashboard.html
@@ -22,14 +22,14 @@
         </div>
         <div class="rightDiv">
             <div class="searchBar">
-                <img class="searchIcon" src="/images/search-icon.svg" alt="Search">
+                <img class="searchIcon" src="./images/search-icon.svg" alt="Search">
                 <p class="searchText">Search</p>
             </div>
             <div class="cornerRight">
-                <img class="notification" src="/images/notification-icon.svg" alt="#">
-                <img class="profile" src="/images/profile.png" alt="#">
+                <img class="notification" src="./images/notification-icon.svg" alt="#">
+                <img class="profile" src="./images/profile.png" alt="#">
                 <p class=userName>John Doe</p>
-                <img class="arrow" src="/images/downward-arrow.svg" alt="#">
+                <img class="arrow" src="./images/downward-arrow.svg" alt="#">
             </div>
         </div>
 
@@ -38,14 +38,14 @@
     </nav>
     <div class="mainDiv">
         <div class="sidebarDiv">
-            <div class="sideIcons1"><img class=sidebarImg src="/images/dashboard-active.svg" alt="#">Dashboard</div>
-            <div class="sideIcons"><img class=sidebarImg src="/images/graph-default.svg" alt="#">Analysis</div>
-            <div class="sideIcons"><img class=sidebarImg src="/images/inbox-default.svg" alt="#">Inbox</div>
-            <div class="sideIcons"><img class=sidebarImg src="/images/clock-default.svg" alt="#">History</div>
-            <div class="sideIcons"><img class=sidebarImg src="/images/user-default.svg" alt="#">Users</div>
-            <div class="sideIcons"><img class=sidebarImg src="/images/maintenance-default.svg" alt="#">Maintenance
+            <div class="sideIcons1"><img class=sidebarImg src="./images/dashboard-active.svg" alt="#">Dashboard</div>
+            <div class="sideIcons"><img class=sidebarImg src="./images/graph-default.svg" alt="#">Analysis</div>
+            <div class="sideIcons"><img class=sidebarImg src="./images/inbox-default.svg" alt="#">Inbox</div>
+            <div class="sideIcons"><img class=sidebarImg src="./images/clock-default.svg" alt="#">History</div>
+            <div class="sideIcons"><img class=sidebarImg src="./images/user-default.svg" alt="#">Users</div>
+            <div class="sideIcons"><img class=sidebarImg src="./images/maintenance-default.svg" alt="#">Maintenance
             </div>
-            <div class="sideIcons"><img class=sidebarImg src="/images/setting-default.svg" alt="#">Setting</div>
+            <div class="sideIcons"><img class=sidebarImg src="./images/setting-default.svg" alt="#">Setting</div>
         </div>
 
         <div class="contentDiv">
@@ -55,7 +55,7 @@
 
             <div class="row2">
                 <div class="images">
-                    <img src="/images/star.svg" alt="#">
+                    <img src="./images/star.svg" alt="#">
                     <div>
                         <h2 class="numbers">23,456
                         </h2>
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="images">
-                    <img src="/images/new-product.svg" alt="#">
+                    <img src="./images/new-product.svg" alt="#">
                     <div>
                         <h2 class="numbers">2345
                         </h2>
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="images">
-                    <img src="/images/total-product.svg" alt="#">
+                    <img src="./images/total-product.svg" alt="#">
                     <div>
                         <h2 class="numbers">5678
                         </h2>
@@ -83,7 +83,7 @@
 
 
                 <div class="images">
-                    <img src="/images/dollar-filled.svg" alt="#">
+                    <img src="./images/dollar-filled.svg" alt="#">
                     <div>
                         <h2 class="numbers">33,5342
                         </h2>
@@ -92,7 +92,7 @@
                 </div>
 
                 <div class="images">
-                    <img src="/images/money-bag.svg" alt="#">
+                    <img src="./images/money-bag.svg" alt="#">
                     <div>
                         <h2 class="numbers">23,456
                         </h2>
@@ -114,7 +114,7 @@
 
                     </div>
                     <div class="col1">
-                        <img src="/images/data-graph.png" alt="#">
+                        <img src="./images/data-graph.png" alt="#">
 
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                     <h2>Sales by Country</h2>
 
                     <div class="col2">
-                        <img src="/images/pie-chart.svg" alt="#">
+                        <img src="./images/pie-chart.svg" alt="#">
                     </div>
                     <ul>
                         <li>United States of America</li>
