--- a/HTML/PSD to HTML/login.html
+++ b/HTML/PSD to HTML/login.html
@@ -37,12 +37,13 @@
                 <button class="btn mt-4 text-light-custom" id="login-btn">Login</button>
             </form>
 
-            <div class="d-flex flex-column align-items-center bottom-div ">
-                <a href="forgot-password.html"><span class="mt-3 login-span text-light-custom">Lost
+            <div class="d-flex flex-column mt-3 align-items-center bottom-div ">
+                <a href="forgot-password.html"><span class="login-span text-light-custom">Lost
                         your
                         password?</span></a>
 
-                <span class="mt-3 login-span text-light-custom">Don't have an account? <a href="#">Create an
+                <span class="mt-3 login-span text-light-custom">Don't have an account? <a
+                        href="registration.html">Create an
                         account</a></span>
                 <span class="login-span text-light-custom privacy-text position-fixed">Priavcy
                     Policy</span>
