--- a/HTML/PSD to HTML/registration.html
+++ b/HTML/PSD to HTML/registration.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Registration</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/registration-responsive.css">
@@ -30,38 +30,38 @@
                 <label for="f-name" class="form-label mb-0 login-label text-light-custom">First Name</label>
                 <input type="text" id="f-name" class="form-control login-input text-light-custom" value="evan">
 
-                <label for="l-name" class="mt-3 mb-0 form-label text-secondary login-label text-light-custom">Last
+                <label for="l-name" class="mt-2 mb-0 form-label text-secondary login-label text-light-custom">Last
                     Name</label>
                 <input type="text" id="l-name" class="form-control login-input text-light-custom" value="donohue">
 
-                <label for="phone" class="mt-3 mb-0 form-label text-secondary login-label text-light-custom">Phone
+                <label for="phone" class="mt-2 mb-0 form-label text-secondary login-label text-light-custom">Phone
                     Number</label>
                 <input type="number" id="phone" class="form-control login-input text-light-custom" value="8923454615">
 
-                <label for="email" class="mt-3 mb-0 form-label text-secondary login-label text-light-custom">Email
+                <label for="email" class="mt-2 mb-0 form-label text-secondary login-label text-light-custom">Email
                     Address</label>
                 <input type="email" id="email" class="form-control login-input text-light-custom"
                     value="evan.donohue@gmail.com">
 
                 <label for="psw"
-                    class="mt-3 mb-0 form-label text-secondary login-label text-light-custom">Password</label>
+                    class="mt-1 mb-0 form-label text-secondary login-label text-light-custom">Password</label>
                 <input type="password" id="psw" class="form-control login-input text-light-custom" value="**********">
 
-                <label for="con-psw" class="mt-3 mb-0 form-label text-secondary login-label text-light-custom">Confirm
+                <label for="con-psw" class="mt-2 mb-0 form-label text-secondary login-label text-light-custom">Confirm
                     Password</label>
                 <input type="password" id="con-psw" class="form-control login-input text-light-custom"
                     value="**********">
 
-                <button class="btn mt-4 text-light-custom" id="login-btn">Register</button>
+                <button class="btn mt-2 text-light-custom" id="login-btn">Register</button>
             </form>
 
-            <div class="d-flex flex-column align-items-center bottom-div ">
-                <a href="forgot-password.html"><span class="mt-3 login-span text-light-custom">Lost
+            <div class="d-flex flex-column mt-2 align-items-center bottom-div ">
+                <a href="forgot-password.html"><span class="login-span text-light-custom">Lost
                         your
                         password?</span></a>
 
-                <span class="mt-3 login-span text-light-custom">Don't have an account? <a href="#">Create an
-                        account</a></span>
+                <span class="mt-3 login-span text-light-custom">Already registerd? <a href="login.html">Login
+                        now</a></span>
                 <span class="login-span text-light-custom privacy-text position-fixed">Priavcy
                     Policy</span>
             </div>
