--- a/HTML/PSD to HTML/home.html
+++ b/HTML/PSD to HTML/home.html
@@ -28,8 +28,8 @@
         </div>
         <div class="dropdown right-div">
             <img class="rounded-circle user-img" src="images/user-img.png" alt="#">
-            <button class="dropdown-toggle policy-btn profile-btn" data-bs-toggle="dropdown" aria-expanded="false"
-                type="button" id="dropdownMenuButton1">Evan Donohue
+            <button class="dropdown-toggle policy-btn profile-btn d-none d-sm-inline" data-bs-toggle="dropdown"
+                aria-expanded="false" type="button" id="dropdownMenuButton1">Evan Donohue
                 <img class="m-1" src="images/drop-down.png" alt="#">
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
