--- a/HTML/PSD to HTML/home.html
+++ b/HTML/PSD to HTML/home.html
@@ -14,8 +14,8 @@
 <body>
     <div class="d-flex justify-content-between container mt-3 first-div">
         <div class="dropdown left-div">
-            <button class="header-toggle border-0">
-                <img class="h-50 d-sm-none" src="./images/list.png" alt="#">
+            <button class="header-toggle d-md-none border-0">
+                <img class="h-50" src="./images/list.png" alt="#">
             </button>
             <img class="logo h-50" src="./images/logo.png" alt="#">
             <a href="#" class="text-decoration-none mx-5 d-none d-md-inline d-lg-inline">Stories</a>
@@ -31,8 +31,8 @@
 
         </div>
         <div class="dropdown right-div">
-            <button class="header-serach border-0">
-                <img class="d-md-none search-logo" for="search-bar" src="./images/search.png" alt="#">
+            <button class="header-serach d-md-none border-0">
+                <img class=" search-logo" for="search-bar" src="./images/search.png" alt="#">
             </button>
             <img class="rounded-circle user-img" src="images/user-img.png" alt="#">
             <button class="dropdown-toggle policy-btn profile-btn d-none d-sm-inline" data-bs-toggle="dropdown"
@@ -56,7 +56,7 @@
         </div>
 
 
-        <button class="col-1 d-lg-none justify-content-end filter-btn border-0">
+        <button class="col-1 d-lg-none  filter-btn border-0">
             <img src="./images/filter.png" alt="#">
         </button>
 
