--- a/HTML/PSD to HTML/mission-not-found.html
+++ b/HTML/PSD to HTML/mission-not-found.html
@@ -89,7 +89,7 @@
 
     <section class="container">
         <div class="mt-3 d-flex justify-content-center fw-bold fs-5">
-            No Mission Found!
+            Mission Not Found!
         </div>
     </section>
 
