--- a/HTML/PSD to HTML/mission-not-found.html
+++ b/HTML/PSD to HTML/mission-not-found.html
@@ -88,7 +88,7 @@
     </section>
 
     <section class="container">
-        <div class="mt-3 d-flex justify-content-center fw-bold fs-5">
+        <div class="mt-3 d-flex justify-content-center fs-5">
             Mission Not Found!
         </div>
     </section>
