--- a/HTML/PSD to HTML/mission-not-found.html
+++ b/HTML/PSD to HTML/mission-not-found.html
@@ -29,7 +29,7 @@
             </ul>
 
         </div>
-        <div class="dropdown right-div">
+        <div class="dropdown right-div mb-3">
             <button class="header-serach d-md-none border-0">
                 <img class="search-logo" for="search-bar" src="./images/search.png" alt="#">
             </button>
@@ -90,6 +90,11 @@
     <section class="container">
         <div class="mt-3 d-flex justify-content-center fs-5">
             Mission Not Found!
+        </div>
+
+        <div class="d-flex justify-content-center">
+            <a href="#" class="btn apply-btn mt-3 mb-3 px-5 ">Submit new mission <img src="./images/right-arrow.png"
+                    alt="#"></a>
         </div>
     </section>
 
