--- a/HTML/PSD to HTML/mission-not-found.html
+++ b/HTML/PSD to HTML/mission-not-found.html
@@ -13,15 +13,17 @@
 <body>
     <div class="d-flex justify-content-between container mt-3 first-div">
         <div class="dropdown left-div">
-            <button class="header-toggle d-md-none border-0">
+            <button class="header-toggle d-md-none border-0 list-btn">
                 <img class="h-50" src="./images/list.png" alt="#">
             </button>
-            <img class="logo h-50" src="./images/logo.png" alt="#">
-            <a href="#" class="text-decoration-none mx-5 d-none d-md-inline d-lg-inline">Stories</a>
-            <button class="dropdown-toggle policy-btn d-none d-md-inline d-lg-inline" data-bs-toggle="dropdown"
-                aria-expanded="false" type="button" id="dropdownMenuButton1">Policy
-                <img class="m-1" src="images/drop-down.png" alt="#">
-            </button>
+            <img class="logo h-50 optimy-logo" src="./images/logo.png" alt="#">
+            <div class="story-policy d-none d-md-inline">
+                <a href="#" class="text-decoration-none mx-5 story-link ">Stories</a>
+                <button class="dropdown-toggle policy-btn" data-bs-toggle="dropdown" aria-expanded="false" type="button"
+                    id="dropdownMenuButton1">Policy
+                    <img class="m-1" src="images/drop-down.png" alt="#">
+                </button>
+            </div>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 <li><a class="dropdown-item" href="#">Action</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -31,7 +33,7 @@
         </div>
         <div class="dropdown right-div mb-3">
             <button class="header-serach d-md-none border-0">
-                <img class="search-logo" for="search-bar" src="./images/search.png" alt="#">
+                <img class="search-logo" id="search-btn" src="./images/search.png" alt="#">
             </button>
             <img class="rounded-circle user-img" src="images/user-img.png" alt="#">
             <button class="dropdown-toggle policy-btn profile-btn d-none d-sm-inline" data-bs-toggle="dropdown"
@@ -46,13 +48,14 @@
         </div>
 
     </div>
-    <section class="d-flex second-div mt-4 w-100">
+    <section class="d-flex second-div mt-5 w-100">
         <div class="container">
             <div class="d-flex row p-0">
                 <div class="col-10 col-md-11 col-lg-6">
-                    <div class="p-3 search-div">
-                        <img class="d-none d-md-inline d-lg-inline" src="./images/search.png" alt="#">
-                        <input type="text" id="search-bar" class="search-bar" placeholder="Search mission...">
+                    <div class="p-3 search-div d-flex gap-3">
+                        <img class="d-none d-md-inline d-lg-inline search-img mt-1" src="./images/search.png" alt="#">
+                        <input type="text" id="search-bar" class="search-bar form-control border-0 p-0"
+                            placeholder="Search mission...">
                     </div>
                 </div>
                 <!-- filter button -->
@@ -97,6 +100,38 @@
                     alt="#"></a>
         </div>
     </section>
+
+    <script>
+        const searchBtn = document.getElementById("search-btn");
+        const searchBar = document.getElementById("search-bar");
+        console.log(searchBtn);
+        console.log(searchBar);
+
+        searchBtn.addEventListener("click", () => {
+            searchBar.focus();
+        });
+
+        const listBtn = document.querySelector(".list-btn");
+        const storyPolicyDiv = document.querySelector(".story-policy");
+        const policyBtn = document.querySelector(".policy-btn");
+        const storyLink = document.querySelector(".story-link");
+        const searchDiv = document.querySelector(".search-div");
+        const optimyLogo = document.querySelector(".optimy-logo");
+
+        listBtn.addEventListener("click", () => {
+            storyPolicyDiv.classList.toggle("d-block");
+            storyPolicyDiv.classList.toggle("d-none");
+
+            // policyBtn.classList.toggle("d-block");
+            storyLink.classList.toggle("m-0");
+            storyLink.classList.toggle("mx-5");
+            // storyPolicyDiv.classList.toggle("position-relative");
+            // storyPolicyDiv.classList.toggle("z-index");
+            // searchDiv.classList.toggle("minus-z-index");
+            // optimyLogo.classList.toggle("minus-z-index");
+
+        });
+    </script>
 
 
 
