--- a/HTML/PSD to HTML/volunteer.html
+++ b/HTML/PSD to HTML/volunteer.html
@@ -31,9 +31,9 @@
 
         </div>
         <div class="dropdown right-div">
-            <button class="header-serach d-md-none border-0">
-                <img class="d-md-none search-logo" for="search-bar" src="./images/search.png" alt="#">
-            </button>
+            <!-- <button class="header-serach d-md-none border-0">
+                <img class="d-md-none search-logo" src="./images/search.png" alt="#">
+            </button> -->
             <img class="rounded-circle user-img" src="images/user-img.png" alt="#">
             <button class="dropdown-toggle policy-btn profile-btn d-none d-sm-inline" data-bs-toggle="dropdown"
                 aria-expanded="false" type="button" id="dropdownMenuButton1">Evan Donohue
@@ -50,7 +50,7 @@
 
 
     <section class="container mt-3 border-top p-5">
-        <div class="d-flex flex-md-column flex-lg-row gap-5 ">
+        <div class="d-flex flex-column flex-sm-column flex-lg-row gap-5 ">
             <div>
                 <img class="poster-img mb-1" src="./images/CSR-initiative-stands-for-Coffee--and-Farmer-Equity-2.png"
                     alt="">
@@ -213,15 +213,15 @@
         <!-- second section -->
         <div class="row">
             <!-- left div  -->
-            <div class="col-7 mt-3">
-                <div class="d-flex gap-3 border-bottom py-3">
-                    <button class="btn mission-btn">Mission</button>
-                    <button class="btn org-btn">Organization</button>
-                    <button class="btn comment-btn">Comments</button>
+            <div class="col-12  col-lg-7 mt-3">
+                <div class="d-flex gap-3 border-bottom pt-3">
+                    <button class="mission-btn border-0 bg-white active-tab">Mission</button>
+                    <button class=" org-btn border-0 bg-white">Organization</button>
+                    <button class=" comment-btn border-0 bg-white">Comments</button>
 
                 </div>
                 <!-- mission  -->
-                <div class="mission-div">
+                <div class="mission-div overflow-scroll">
                     <div class="pt-3 ">
                         <h3 class="intro fs-3">Introduction</h3>
                         <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quos
@@ -288,7 +288,7 @@
                         facere cum repellat sequi sed?</p>
                 </div>
                 <!-- Comments  -->
-                <div class="d-none comment-div">
+                <div class="d-none comment-div mt-3">
                     <textarea name="" id="" cols=" 10" rows="4"
                         class="form-control text-secondary">Enter your comments...</textarea>
 
@@ -345,24 +345,24 @@
             </div>
 
             <!-- right div  -->
-            <div class="col-5 d-flex flex-column gap-5 mt-5">
+            <div class="col-12 col-lg-5 d-flex flex-column gap-5 mt-5">
                 <!-- right first div  -->
-                <div class=" border p-2">
-                    <p class="border-bottom py-3"> Information</p>
-                    <div class="d-flex border-bottom flex-wrap gap-1 ">
+                <div class=" border p-3">
+                    <h5 class="border-bottom py-3  active-tab d-inline"> Information</h5>
+                    <div class="d-flex  flex-wrap gap-lg-1 justify-content-between mt-4 border-bottom">
                         <p>Skills</p>
-                        <ul class="d-flex skills-ul flex-wrap skill-ul">
+                        <ul class="d-flex skills-ul flex-wrap ">
                             <li class="ms-1">Cool,</li>
                             <li class="ms-1">Easy going,</li>
                             <li class="ms-1">Math,</li>
                             <li class="ms-1">Computer</li>
                         </ul>
                     </div>
-                    <div class="d-flex border-bottom gap-5 mt-2">
+                    <div class="d-flex border-bottom justify-content-between gap-lg-5 mt-2">
                         <p>Days</p>
                         <p>Weekend only</p>
                     </div>
-                    <div class="d-flex gap-4 mt-2">
+                    <div class="d-flex gap-lg-4 mt-2 gap-5 justify-content-md-between">
                         <p>Rating</p>
                         <div>
                             <img src="./images/selected-star.png" alt="">
@@ -376,9 +376,9 @@
                     </div>
                 </div>
                 <!-- right second div  -->
-                <div class="border ">
-                    <p class="ps-2 py-3 border-bottom">Recent Volunteers</p>
-                    <div class="d-flex justify-content-around border-bottom p-3 flex-wrap volunteer-div">
+                <div class="border p-3 ps-0  pe-0 pb-0 ">
+                    <h4 class="ps-3  py-3  border-bottom active-tab d-inline">Recent Volunteers</h4>
+                    <div class="d-flex justify-content-around p-sm-1 p-lg-5 flex-wrap volunteer-div mt-4">
                         <div class="text-center">
                             <img class="rounded-pill" src="./images/volunteer1.png" alt="">
                             <p class="volunteer-name">Andrew Johnson</p>
@@ -426,11 +426,11 @@
 
                     </div>
                     <div class="d-flex justify-content-around border-top">
-                        <a class="border-end bg-white p-3 ">
+                        <a class="border-end bg-white px-2 py-2 p-lg-3 p-md-4 ">
                             <img src="./images/left.png" alt="">
                         </a>
-                        <p class="pt-3">1 - 9 of 25 Recent Volunteers</p>
-                        <a class=" border-start bg-white p-3">
+                        <p class="pt-3 text-center">1 - 9 of 25 Recent Volunteers</p>
+                        <a class=" border-start bg-white px-2 py-2 p-lg-3 p-md-4">
                             <img src="./images/right-arrow1.png" alt="">
                         </a>
                     </div>
@@ -448,14 +448,14 @@
                     <div class="card">
                         <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
                             class="card-img-top position-relative" alt="...">
-                        <div class=" position-absolute country-div rounded-pill p-2">
+                        <div class=" position-absolute country-div-volunteer rounded-pill p-2">
                             <img class="" src="./images/pin1.png" alt="#">
                             <span>Toronto</span>
                         </div>
-                        <a href="#" class="position-absolute favourate rounded-pill p-1">
+                        <a href="#" class="position-absolute favourate-volunteer rounded-pill p-1">
                             <img class="" src="./images/heart.png" alt="#">
                         </a>
-                        <a href="#" class="position-absolute user-div rounded-pill p-2">
+                        <a href="#" class="position-absolute user-div-volunteer rounded-pill p-2">
                             <img class="" src="./images/user.png" alt="#">
                         </a>
                         <span
@@ -518,14 +518,14 @@
                     <div class="card">
                         <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
                             class="card-img-top position-relative" alt="...">
-                        <div class="position-absolute country-div rounded-pill p-2">
+                        <div class="position-absolute country-div-volunteer rounded-pill p-2">
                             <img class="" src="./images/pin1.png" alt="#">
                             <span>Toronto</span>
                         </div>
-                        <a href="" class="position-absolute favourate rounded-pill p-1">
+                        <a href="" class="position-absolute favourate-volunteer rounded-pill p-1">
                             <img class="" src="./images/heart.png" alt="#">
                         </a>
-                        <a href="" class="position-absolute user-div rounded-pill p-2">
+                        <a href="" class="position-absolute user-div-volunteer rounded-pill p-2">
                             <img class="" src="./images/user.png" alt="#">
                         </a>
                         <span
@@ -595,14 +595,14 @@
                     <div class="card">
                         <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
                             class="card-img-top position-relative" alt="...">
-                        <div class="position-absolute country-div rounded-pill p-2">
+                        <div class="position-absolute country-div-volunteer  rounded-pill p-2">
                             <img class="" src="./images/pin1.png" alt="#">
                             <span>Toronto</span>
                         </div>
-                        <a href="" class="position-absolute favourate rounded-pill p-1">
+                        <a href="" class="position-absolute  favourate-volunteer rounded-pill p-1">
                             <img class="" src="./images/heart.png" alt="#">
                         </a>
-                        <a href="" class="position-absolute user-div rounded-pill p-2">
+                        <a href="" class="position-absolute  user-div-volunteer rounded-pill p-2">
                             <img class="" src="./images/user.png" alt="#">
                         </a>
                         <span
@@ -685,6 +685,9 @@
             orgDiv.classList.add("d-none");
             commentDiv.classList.add("d-none");
             missionDiv.classList.remove("d-none");
+            missionBtn.classList.add("active-tab");
+            orgBtn.classList.remove("active-tab");
+            commentBtn.classList.remove("active-tab");
         });
 
 
@@ -692,6 +695,9 @@
             missionDiv.classList.add("d-none");
             commentDiv.classList.add("d-none");
             orgDiv.classList.remove("d-none");
+            orgBtn.classList.add("active-tab");
+            missionBtn.classList.remove("active-tab");
+            commentBtn.classList.remove("active-tab");
         });
 
 
@@ -699,7 +705,12 @@
             missionDiv.classList.add("d-none");
             orgDiv.classList.add("d-none");
             commentDiv.classList.remove("d-none");
+            commentBtn.classList.add("active-tab");
+            missionBtn.classList.remove("active-tab");
+            orgBtn.classList.remove("active-tab");
         });
+
+
 
 
     </script>
