made some changes

--- a/HTML/PSD to HTML/home.html
+++ b/HTML/PSD to HTML/home.html
@@ -41,12 +41,17 @@
                     aria-expanded="false" type="button" id="dropdownMenuButton1">Evan Donohue
                     <img class="m-1" src="images/drop-down.png" alt="#">
                 </button>
+
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><a class="dropdown-item" href="#">Action</a></li>
                     <li><a class="dropdown-item" href="#">Another action</a></li>
                     <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
+                <div class="d-inline">
+                    <button class="btn btn-danger rounded">Logout</button>
+                </div>
             </div>
+
 
         </div>
 
