--- a/HTML/PSD to HTML/share-story.html
+++ b/HTML/PSD to HTML/share-story.html
@@ -73,21 +73,38 @@
             </div>
             <label class="mb-2">Upload your Photos</label>
 
-            <label for="drag-img" class="drag-label">
-                <div class="d-flex justify-content-center drag-drop-div">
-                    <img src="images/drag-and-drop.png" class="p-5" alt="Drag And Drop">
-                </div>
-            </label>
 
-            <div class="mt-4">
-                <a class="btn border-secondary rounded-pill px-4 py-2">Cancle</a>
+            <div class="d-flex justify-content-center drag-drop-div">
+                <img src="images/drag-and-drop.png" class="p-5 drag-images" alt="Drag And Drop">
             </div>
 
+            <div class="image-display-div mt-4 d-flex">
 
-            <input type="file" id="drag-img" hidden>
+            </div>
+            <input type="file" id="drag-img" hidden accept=".png, .jpeg, .jpg" multiple>
+            <div class="d-flex justify-content-between">
+                <div class="mt-4">
+                    <a class="btn border-secondary rounded-pill px-4 py-2">Cancle</a>
+                </div>
+
+                <div class="d-flex">
+                    <div class="mt-4 me-2">
+                        <a class="btn border rounded-pill px-4 py-2 orange-btn"
+                            style="border-color: #F88634 !important">Save</a>
+                    </div>
+                    <div class="mt-4">
+                        <a class="btn border rounded-pill px-4 py-2 orange-btn"
+                            style="border-color: #F88634 !important">Submit</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 
     <script src="js/tinymce.js"></script>
+    <script src="js/story.js"></script>
+
+
 </body>
