--- a/HTML/PSD to HTML/user-edit.html
+++ b/HTML/PSD to HTML/user-edit.html
@@ -83,6 +83,78 @@
                     </div>
                 </div>
 
+
+
+                <div class="modal" id="contactUsModal" tabindex="-1">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header border-0">
+                                <h5 class="modal-title">Contact Us</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <label for="name" class="form-label text-secondary">Name*</label>
+                                <input type="text" class="form-control bg-body-secondary" placeholder="Smith Doh"
+                                    id="name">
+                                <label for="email" class="form-label text-secondary mt-3">Email Address*</label>
+                                <input type="text" id="email" class="form-control bg-body-secondary"
+                                    placeholder="Smith doh1234@gmail.com">
+                                <label for="subject" class="form-label text-secondary mt-3">Subject*</label>
+                                <input type="password" id="subject" class="form-control"
+                                    placeholder="Enter your Subject">
+                                <label for="message" class="form-label text-secondary mt-3">Message*</label>
+                                <textarea id="message" cols="30" rows="3" class="form-control"
+                                    placeholder="Enter your Message"></textarea>
+                            </div>
+                            <div class="modal-footer border-0">
+                                <a class="btn border-secondary rounded-pill px-4 py-2 text-secondary"
+                                    data-bs-dismiss="modal">Cancle</a>
+                                <button class="btn border rounded-pill px-4 py-2 orange-btn"
+                                    style="border-color: #F88634 !important">Save</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="modal" id="skillModal" tabindex="-1">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header border-0">
+                                <h5 class="modal-title">Add your Skills</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body d-flex justify-content-between">
+                                <div class="border ps-3 py-3 pe-5">
+                                    <ul class="skill-list px-0">
+                                        <li>first div</li>
+                                    </ul>
+                                </div>
+                                <div class="d-flex flex-column justify-content-center">
+                                    <div><button class="border-0 bg-white text-secondary">></button></div>
+                                    <div>
+                                        <button class="border-0 bg-white text-secondary">
+                                            < </button>
+                                    </div>
+                                </div>
+                                <div class="border ps-3 py-3 pe-5">
+                                    <ul class="skill-list px-0">
+                                        <li>second div</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="modal-footer border-0 d-flex justify-content-start">
+                                <a class="btn border-secondary rounded-pill px-4 py-2 text-secondary"
+                                    data-bs-dismiss="modal">Cancle</a>
+                                <button class="btn border rounded-pill px-4 py-2 orange-btn"
+                                    style="border-color: #F88634 !important">Save</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="p-5 col-12 col-lg-8">
                     <div class="border-bottom">
                         <div class="head-border pb-3 fs-4">Basic Information</div>
@@ -196,7 +268,8 @@
                         </div>
 
                         <div class="mt-3">
-                            <a class="btn border-secondary rounded-pill px-4 py-2 text-secondary">Add Skills</a>
+                            <a class="btn border-secondary rounded-pill px-4 py-2 text-secondary"
+                                data-bs-target="#skillModal" data-bs-toggle="modal">Add Skills</a>
                         </div>
                         <div class="mt-3 d-flex justify-content-end">
                             <button class="btn border rounded-pill px-4 py-2 orange-btn"
@@ -211,6 +284,24 @@
     </section>
     <script src="./js/bootstrap.bundle.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+
+
+    <footer>
+        <div class="container border-top p-3 d-flex gap-3 mt-5 footer-div">
+            <div>
+                <a href="" class="fw-bold text-decoration-none text-black">Privacy Policy</a>
+
+            </div>
+            <div>
+                <a href="" class="text-secondary text-decoration-none" data-bs-target="#contactUsModal"
+                    data-bs-toggle="modal">Contact us</a>
+
+            </div>
+
+
+        </div>
+
+    </footer>
 </body>
 
 </html>
